[package]
name = "murk"
version = "0.1.0"
authors = ["Daniel McKenna <daniel@emotech.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
humantime = "2.1.0"
hyper = { version = "0.14.4", features = ["full"] }
mun_runtime = "0.2.0"
num_cpus = "1.13.0"
structopt = "0.3.21"
tokio = { version = "1.2.0", features = ["full"] }
tower = { version = "0.4.6", features = ["full"] }
quanta = "0.7.2"
futures = "0.3.13"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = { version = "0.3", features = ["background_threads"] }

[profile.release]
lto = true
